--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite: ^1.3.0
+  flutter_speed_dial: ^2.1.1
+  toast: ^0.1.5
+  flutter_secure_storage: ^3.3.5
+  local_auth: ^0.6.3+4
 
 
   # The following adds the Cupertino Icons font to your application.
